--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -19,7 +19,7 @@
 #
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org> hwdetect script
 #
-# File version: $Id: hwdetect.in,v 1.2 2003/09/25 08:40:25 jaco Exp $
+# $Id: hwdetect.in,v 1.3 2003/09/25 08:42:54 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
