--- a/mklivecd/src/linuxrc.in
+++ b/mklivecd/src/linuxrc.in
@@ -19,7 +19,7 @@
 #
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) linuxrc script
 #
-# File version: $Id: linuxrc.in,v 1.2 2003/09/25 08:40:25 jaco Exp $
+# $Id: linuxrc.in,v 1.3 2003/09/25 08:42:54 jaco Exp $
 #
 
 ### global variables
