--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -19,7 +19,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# File version: $Id: mklivecd.in,v 1.2 2003/09/25 08:40:25 jaco Exp $
+# $Id: mklivecd.in,v 1.3 2003/09/25 08:42:54 jaco Exp $
 #
 
 PATH=/sbin:/usr/sbin:$PATH
