--- a/mklivecd/src/linuxrc.in
+++ b/mklivecd/src/linuxrc.in
@@ -19,7 +19,7 @@
 #
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) linuxrc script
 #
-# $Id: linuxrc.in,v 1.3 2003/09/25 08:42:54 jaco Exp $
+# $Id: linuxrc.in,v 1.4 2003/09/30 08:45:21 jaco Exp $
 #
 
 ### global variables
@@ -121,10 +121,10 @@ loadmod() {
 initialise() {
 	busybox mount -t proc none /proc
 	busybox --install
-	docmd "Setting up kernel parameters" \
-              "echo '0' >/proc/sys/kernel/printk" \
-              "echo '/sbin/modprobe' >/proc/sys/kernel/modprobe" \
-              "exec >/dev/console </dev/console 2>&1"
+	docmd   "Setting up kernel parameters" \
+		"echo '0' >/proc/sys/kernel/printk" \
+		"echo '/sbin/modprobe' >/proc/sys/kernel/modprobe" \
+		"exec >/dev/console </dev/console 2>&1"
 	KERNELVER=`uname -r`
 # removed for now, this was part of the original MiniCD script -
 # not deleted to enable us to add a bootsplash at a later point
@@ -283,54 +283,82 @@ createramdisk() {
 
 	# Check for sufficient memory to mount extra ramdisk for /etc, /home, /root, /var
 	if test -n "$TOTALMEM" -a "$TOTALMEM" -gt "$MINLEFT"; then
-		docmd "Creating $MNTRAMDISK (${RAMSIZE}/${FOUNDMEM}kB) on /dev/shm" \
-                      "mount -t tmpfs -o 'size=${RAMSIZE}k' /dev/shm $MNTRAMDISK" \
-                      "mkdir -p $MNTRAMDISK/dev $MNTRAMDISK/initrd $MNTRAMDISK/proc" \
-                      "echo '0x0100' >/proc/sys/kernel/real-root-dev" \
-                      "pivot_root $MNTRAMDISK $MNTRAMDISK/initrd" \
-                      "cd /" \
-                      "touch fastboot" \
-                      "ln -sf /initrd$MNTLIVECD/bin" \
-                      "ln -sf /initrd$MNTLIVECD/boot" \
-                      "ln -sf /initrd$MNTLIVECD/lib" \
-                      "ln -sf /initrd$MNTLIVECD/opt" \
-                      "ln -sf /initrd$MNTLIVECD/sbin" \
-                      "ln -sf /initrd$MNTLIVECD/usr" \
-                      "mount -n --move /initrd/dev  /dev" \
-                      "mount -n --move /initrd/proc /proc" \
-                      "mkdir -p /mnt && ln -sf /initrd$MNTCDROM /mnt/cdrom" \
-                      "mkdir -p /tmp" \
-                      "chmod 777 /tmp" \
-                      "mkdir -p /var" \
-                      "cd /initrd$MNTLIVECD/var ; for d in *; do [ -d /initrd$MNTLIVECD/var/\$d ] && ln -sf /initrd$MNTLIVECD/var/\$d /var/\$d || true; done" \
-                      "rm -rf /var/lib && mkdir -p /var/lib" \
-                      "cd /initrd$MNTLIVECD/var/lib ; for d in *; do [ -d /initrd$MNTLIVECD/var/lib/\$d ] && ln -sf /initrd$MNTLIVECD/var/lib/\$d /var/lib/\$d || true; done" \
-                      "rm -rf /var/log && mkdir -p /var/log" \
-                      "cd /initrd$MNTLIVECD/var/log ; for d in *; do [ -d /initrd$MNTLIVECD/var/log/\$d ] && mkdir -p /var/log/\$d || true; done" \
-                      "touch /var/log/wtmp" \
-                      "rm -rf /var/lock && mkdir -p /var/lock/subsys" \
-                      "rm -rf /var/run && mkdir -p /var/run" \
-                      "touch /var/run/utmp" \
-                      "rm -rf /var/tmp && ln -s ../tmp /var/tmp"
-		docmd "Creating /etc structure" \
-                      "cp -a /initrd$MNTLIVECD/etc /" \
-                      "chmod a+rw /etc" \
-                      "rm -rf /etc/mtab" \
-                      "ln -sf /proc/mounts /etc/mtab" \
-                      "rm -rf /etc/fstab" \
-                      "echo 'none       /proc        proc     defaults  0 0' >/etc/fstab" \
-                      "echo 'none       /dev         devfs    defaults  0 0' >>/etc/fstab" \
-                      "echo '/dev/rd/3  /            ext2     defaults  0 0' >>/etc/fstab" \
-                      "echo '' >/etc/modules.conf" \
-                      "cp /initrd/etc/init.d/hwdetect /etc/init.d" \
-                      "chmod 755 /etc/init.d/hwdetect" \
-                      "ln -s ../init.d/hwdetect /etc/rc.d/rc3.d/S00hwdetect" \
-                      "ln -s ../init.d/hwdetect /etc/rc.d/rc5.d/S00hwdetect" \
-                      "rm -rf /etc/rc.d/rc3.d/S05harddrake" \
-                      "rm -rf /etc/rc.d/rc5.d/S05harddrake"
-		docmd "Creating user directories" \
-                      "cp -a /initrd$MNTLIVECD/root /" \
-                      "cp -a /initrd$MNTLIVECD/home /"
+		docmd   "Creating $MNTRAMDISK (${RAMSIZE}/${FOUNDMEM}kB) on /dev/shm" \
+			"mount -t tmpfs -o 'size=${RAMSIZE}k' /dev/shm $MNTRAMDISK" \
+			"mkdir -p $MNTRAMDISK/initrd" \
+			"echo '0x0100' >/proc/sys/kernel/real-root-dev" \
+			"pivot_root $MNTRAMDISK $MNTRAMDISK/initrd" \
+			"cd /" \
+			"touch fastboot" \
+			"ln -sf /initrd$MNTLIVECD/bin" \
+			"ln -sf /initrd$MNTLIVECD/boot" \
+			"ln -sf /initrd$MNTLIVECD/lib" \
+			"ln -sf /initrd$MNTLIVECD/opt" \
+			"ln -sf /initrd$MNTLIVECD/sbin" \
+			"ln -sf /initrd$MNTLIVECD/usr" \
+			"mkdir -p /dev && mount -n --move /initrd/dev  /dev" \
+			"mkdir -p /proc && mount -n --move /initrd/proc /proc" \
+			"mkdir -p /mnt && ln -sf /initrd$MNTCDROM /mnt/cdrom" \
+			"mkdir -p /tmp && chmod 777 /tmp"
+		docmd   "Creating /var structure" \
+			"mkdir -p /var" \
+			"cd /initrd$MNTLIVECD/var ; \
+			for d in *; do \
+				if [ -d /initrd$MNTLIVECD/var/\$d ]; then \
+					case \$d in \
+						cache|db|local|lock|log|mail|nis|opt|preserve|run|spool|yp) \
+							mkdir -p /var/\$d || true ; \
+							for s in \$d/*; do \
+								[ -d /initrd$MNTLIVECD/var/\$s ] && mkdir -p /var/\$s || true; \
+							done \
+							;; \
+						tmp|lib)
+							;;
+						*) \
+							ln -sf /initrd$MNTLIVECD/var/\$d /var/\$d || true; \
+							;; \
+					esac \
+				fi \
+			done" \
+			"mkdir -p /var/lib" \
+			"cd /initrd$MNTLIVECD/var/lib ;
+			for d in *; do \
+				if [ -d /initrd$MNTLIVECD/var/lib/\$d ]; then \
+					case \$d in \
+						rpm|urpmi) \
+							ln -sf /initrd$MNTLIVECD/var/lib/\$d /var/lib/\$d || true; \
+							;; \
+						*) \
+							mkdir -p /var/lib/\$d || true ; \
+							for s in \$d/*; do \
+								[ -d /initrd$MNTLIVECD/var/lib/\$s ] && mkdir -p /var/lib/\$s || true; \
+							done \
+							;; \
+					esac \
+				fi \
+			done" \
+			"mkdir -p /var/log && touch /var/log/wtmp" \
+			"mkdir -p /var/run && touch /var/run/utmp" \
+			"ln -s /tmp /var/tmp"
+		docmd   "Creating /etc structure" \
+			"cp -a /initrd$MNTLIVECD/etc /" \
+			"chmod a+rw /etc" \
+			"rm -rf /etc/mtab" \
+			"ln -sf /proc/mounts /etc/mtab" \
+			"rm -rf /etc/fstab" \
+			"echo 'none      /proc proc  defaults 0 0' >/etc/fstab" \
+			"echo 'none      /dev  devfs defaults 0 0' >>/etc/fstab" \
+			"echo '/dev/rd/3 /     ext2  defaults 0 0' >>/etc/fstab" \
+			"echo '' >/etc/modules.conf" \
+			"cp /initrd/etc/init.d/hwdetect /etc/init.d" \
+			"chmod 755 /etc/init.d/hwdetect" \
+			"ln -s ../init.d/hwdetect /etc/rc.d/rc3.d/S00hwdetect" \
+			"ln -s ../init.d/hwdetect /etc/rc.d/rc5.d/S00hwdetect" \
+			"rm -rf /etc/rc.d/rc3.d/S05harddrake" \
+			"rm -rf /etc/rc.d/rc5.d/S05harddrake"
+		docmd   "Creating user directories" \
+			"cp -a /initrd$MNTLIVECD/root /" \
+			"cp -a /initrd$MNTLIVECD/home /"
 	else
 		$SETCOLOR_FAIL
 		echo ""
@@ -349,8 +377,8 @@ setupinit() {
 		execshell
 	else
 		# clean up
-		docmd "Unmounting /proc filesystem" \
-                      "umount /proc"
+		docmd   "Unmounting /proc filesystem" \
+			"umount /proc"
 
 		### go to mdk init
 		echo "Starting Mandrake Linux init sequence ..."
