--- a/mklivecd/mklivecd.spec.in
+++ b/mklivecd/mklivecd.spec.in
@@ -1,8 +1,8 @@
-# $Id: mklivecd.spec.in,v 1.6 2003/09/30 22:33:06 bgmilne Exp $
+# $Id: mklivecd.spec.in,v 1.7 2003/10/02 05:29:48 jaco Exp $
 
 %define name		mklivecd
-%define version		@MKLIVECDVER
-%define release		@RELEASE
+%define version		@MKLIVECDVER@
+%define release		@MKLIVECDREL@mdk
 %if %(echo %release|grep -q cvs; echo $[1-$?])
 %global	cvs		%(echo 0.cvs.20031001.1mdk| tr -d [a-z]|cut -d. -f3)
 %endif
@@ -47,8 +47,8 @@ rm -rf %buildroot
 %{_datadir}/mklivecd/init.d/hwdetect
 
 %changelog
-* Mon Sep 29 2003 Jaco Greeff <jaco@linuxminicd.org> @MKLIVECDVER-@RELEASE
-- version @MKLIVECDVER
+* Mon Sep 29 2003 Jaco Greeff <jaco@linuxminicd.org> @MKLIVECDVER@-@MKLIVECDREL@mdk
+- version @MKLIVECDVER@
 
 * Sat Sep 27 2003 Tibor Pittich <Tibor.Pittich@phuture.sk> 0.5.5-2mdk
 - rebuild
