--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -19,12 +19,12 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.10 2003/10/01 13:51:31 jaco Exp $
+# $Id: mklivecd.in,v 1.11 2003/10/02 05:29:48 jaco Exp $
 #
 
 PATH=/sbin:/usr/sbin:$PATH
 export PATH
-VERSION="@MKLIVECDVER"
+VERSION="@MKLIVECDVER@"
 
 rootdir=/
 target=""
